update copy for wwwww

--- a/_data/copy.toml
+++ b/_data/copy.toml
@@ -19,23 +19,23 @@ width = 800
 height = 800
 
 [wwwww.who]
-text = "Alfie Renn"
 question = "am I?"
+text = "Alfie Renn! I am UK-based, and currently living in Sheffield. I am an enthusiastic and experimental technophile, who loves to see what forces for good are possible using technology."
 [wwwww.what]
-text = "develop"
 question = "do I do?"
+text = "I make websites, I make software, and I make good decisions. I know web fundamentals inside-out. As for tools, I use Eleventy, a robust and extendible static-site generator; I use Vue, a powerful front-end framework; and I use Python to suuplement my work, with powerful scripting."
 [wwwww.where]
-text = "Sheffield"
 question = "can you find me?"
+text = "Usually around GitHub..! Or many more places across the web. But, right here on this website is your literal answer."
 [wwwww.when]
-text = "now!"
 question = "can I do what you want?"
+text = "Likely soon! Send me an email on <a href='mailto:alfie@alfierenn.dev'>alfie@alfierenn.dev</a>, and I can let you know my availability!"
 [wwwww.why]
-text = "I love it"
 question = "do I do what I do?"
+text = "I love the Internet! I think it is such a great opportunity that we have it. I think the ability to make stuff that is easily shared on the web should be accessible to anyone and everyone, and I respect this view when I make things for the Internet by making them as simple and robust as possible."
 [wwwww.how]
-text = "with vim"
 question = "will I do what you want?"
+text = "That depends entirely on what you want and what you have already. Let's talk about it and share ideas together!"
 
 [[portfolio.sites]]
 title = "lipu tenpo website"
