edit headshot photo

--- a/_data/copy.toml
+++ b/_data/copy.toml
@@ -14,7 +14,7 @@ og-url = "https://alfierenn.dev"
 og-image = "https://alfierenn.dev/og-image.png"
 
 [image]
-src = "/alfie-renn-headshot.png"
+src = "/alfie-renn-headshot.jpg"
 alt = "headshot of Alfie Renn"
 width = 800
 height = 800
