--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/alifeee/alfierenn.dev#readme",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "clean-css": "^5.3.3",
     "toml": "^3.0.0"
   }
 }
