--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
+      - name: Spellcheck
+        run: npm run spellcheck
       - name: Build
         run: npm run build
 
