Update lipu tenpo website location

--- a/_data/copy.toml
+++ b/_data/copy.toml
@@ -42,7 +42,7 @@ text = "That depends entirely on what you want and what you have already. Let's 
 title = "lipu tenpo Website"
 description = "A static content hosting website for a community made magazine, with user-friendly configuration and modern HTML standards of design and accessibility"
 tools = ["Eleventy", "HTML/CSS/JS"]
-link = "https://liputenpo.alifeee.co.uk"
+link = "https://liputenpo.org"
 [portfolio.sites.image]
 src = "./public/portfolio_lipu-tenpo.png"
 alt = "screenshot of lipu tenpo website"
