--- a/_data/copy.toml
+++ b/_data/copy.toml
@@ -14,7 +14,7 @@ og-url = "https://alfierenn.dev"
 og-image = "https://alfierenn.dev/alfie-renn.jpg"
 
 [image]
-src = "/alfie-renn.webp"
+src = "/alfie-renn-2.webp"
 alt = "head shot of Alfie Renn"
 width = 800
 height = 800
