update OG image

--- a/_data/copy.toml
+++ b/_data/copy.toml
@@ -11,7 +11,7 @@ description = "Alfie Renn's developer portfolio"
 og-title = "Alfie Renn's developer portfolio"
 og-description = "Alfie Renn's developer portfolio"
 og-url = "https://alfierenn.dev"
-og-image = "https://alfierenn.dev/alfie-renn.jpg"
+og-image = "https://alfierenn.dev/alfie-renn-2.jpg"
 
 [image]
 src = "/alfie-renn-2.webp"
